			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

13-May-2005
~~~~~~~~~~~
Type changes for 64-bit compatibility (Tony Houghton).

Tests whether dnotify_wakeup_flag is set instead of dnotify_wakeup which is a
function address (Tony Houghton).

08-May-2005
~~~~~~~~~~~
Selecting an entry from the bookmarks menu can open a new window, depending
on the mouse button used and the 'New window on button 1' setting
(Stephen Watson).

03-May-2005
~~~~~~~~~~~
World-writable directories can't be app dirs (Thomas Leonard).

02-May-2005
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).
Fixed missing argument in remote.c (Pär Forsling).

01-May-2005
~~~~~~~~~~~
When using the drag-and-drop menu, give the choice of creating relative or
absolute symlinks. For Ctrl-Shift-Drag, always make relative links rather
than absolute ones (Thomas Leonard; requested by Peter Prohaska).

28-Apr-2005
~~~~~~~~~~~
If we can't find getopt_long, try looking in libgnugetopt (Stephen Watson).

26-Apr-2005
~~~~~~~~~~~
Bugfix: Broke get_xdg_data_dirs while writing choices_list_xdg_dirs (Stephen 
        Watson, reported by Pär Forsling).
Bugfix: Don't try to move directories that aren't there, but make symbolic
        links for them anyway (Stephen Watson, reported by Thomas Leonard).
Old choices_find_path_load/save now static, use new XDG functions exclusively
(Stephen Watson).

25-Apr-2005
~~~~~~~~~~~
Change over from CHOICESPATH to XDG_CONFIG_HOME and XDG_CONFIG_DIRS (Stephen
Watson).

21-Apr-2005
~~~~~~~~~~~
Try to cope with BadWindow errors (Thomas Leonard; suggested by Kacper Wysock).

17-Apr-2005
~~~~~~~~~~~
Bugfix: Replacing an existing display settings would erase all the other
        existing settings (Stephen Watson, reported by Henrik Jacobsson).

16-Apr-2005
~~~~~~~~~~~
Bugfix: Expired thumbnails were not being purged from the memory cache
        because of a reference counting issue (Stephen Watson).

14-Apr-2005
~~~~~~~~~~~