@@ -3016,6 +3016,10 @@ $ rehash</screen>
        <listitem><para>open a directory showing FILE.
       </para></listitem></varlistentry>
 
+      <varlistentry><term><option>-S</option></term><term><option>--rox-session</option></term>
+       <listitem><para>run under ROX-Session, open the default panel and pinboard (implies --new).
+      </para></listitem></varlistentry>
+
       <varlistentry><term><option>-t</option></term><term><option>--top=PANEL</option></term>
        <listitem><para>open PANEL as a top-edge panel.
       </para></listitem></varlistentry>
