@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+20-May-2005
+~~~~~~~~~~~
+Change the way that ROX-Session runs ROX-Filer.  It now uses the -S option to
+open the default Panel and Pinboard, with the configuration of panel and 
+pinboard in ROX-Filer options (Stephen Watson).
+
 13-May-2005
 ~~~~~~~~~~~
 Type changes for 64-bit compatibility (Tony Houghton).
